@@ -7,6 +7,7 @@ import com.ess.assignment.core.req.AssignmentRequest;
 import com.ess.assignment.core.utils.PlacementType;
 import com.ess.assignment.core.utils.Status;
 import com.ess.assignment.infrastructure.domain.sql.model.AssignmentEntity;
+import com.ess.assignment.infrastructure.domain.sql.model.EmployeeEntity;
 import com.ess.assignment.infrastructure.domain.sql.repository.AssignmentRepository;
 import com.ess.assignment.infrastructure.domain.sql.service.handler.AssignmentMapper;
 import jakarta.persistence.EntityNotFoundException;
@@ -32,6 +33,18 @@ public class AssignmentServiceImpl {
 
     @Autowired
     GlobalExceptionHandler globalExceptionHandler;
+
+    // Helper method to create Pagination Response
+    private <T> PaginationResponse<T> createPaginationResponse(Page<T> page) {
+        return new PaginationResponse<>(
+
+                page.getNumber(),
+                page.getTotalPages(),
+                page.getTotalElements(),
+                page.getSize(),
+                page.getContent()
+        );
+    }
 
     // Create Assignment
     public ApiResponse createAssignment(AssignmentRequest assignmentRequest) {
@@ -67,7 +80,7 @@ public class AssignmentServiceImpl {
     public ApiResponse updateAssignment(Long id, AssignmentRequest assignmentRequest) {
         if (assignmentRepository.existsById(id)) {
             AssignmentEntity assignmentEntity = assignmentMapper.toEntity(assignmentRequest.getAssignmentDTO());
-            assignmentEntity.setAssignmentId(id);  // Preserve the ID to avoid creating a new record
+            //assignmentEntity.setAssignmentId(id);  // Preserve the ID to avoid creating a new record
             AssignmentEntity updatedEntity = assignmentRepository.save(assignmentEntity);
 
             return new ApiResponse(true, "Assignment updated successfully",
@@ -77,104 +90,43 @@ public class AssignmentServiceImpl {
         }
     }
 
-    // Delete Assignment
-    public ApiResponse deleteAssignment(Long id) {
-        if (assignmentRepository.existsById(id)) {
-            assignmentRepository.deleteById(id);
-            return new ApiResponse(true, "Assignment deleted successfully", null, null);
-        } else {
-            throw new EntityNotFoundException("Assignment with ID " + id + " not found");
-        }
-    }
+//    // Delete Assignment
+//    public ApiResponse deleteAssignment(Long id) {
+//        if (assignmentRepository.existsById(id)) {
+//            assignmentRepository.deleteById(id);
+//            return new ApiResponse(true, "Assignment deleted successfully", null, null);
+//        } else {
+//            throw new EntityNotFoundException("Assignment with ID " + id + " not found");
+//        }
+//    }
 
-    // Get All Assignments with Pagination
+//    // Delete Assignment
+//    public ApiResponse deleteAssignment(Long id) {
+//        Optional<AssignmentEntity> assignmentEntityOptional = assignmentRepository.findById(id);
+//        if (assignmentEntityOptional.isPresent()) {
+//            assignmentRepository.deleteById(id);
+//            return new ApiResponse(true, "Assignment deleted successfully", null, null);
+//        }
+//        return new ApiResponse(false, "Assignment not found", null, null);
+//    }
+
+    // Get All Assignments
     public ApiResponse getAllAssignments(int page, int pageSize) {
-        Pageable pageable = PageRequest.of(page, pageSize, Sort.by("assignmentCode").ascending());
-        Page<AssignmentEntity> assignmentPage = assignmentRepository.findAll(pageable);
 
+        Pageable pageable = PageRequest.of(page, pageSize, Sort.unsorted());
+        Page<AssignmentEntity> assignmentPage = assignmentRepository.findAll(pageable);
         List<AssignmentDTO> assignments = assignmentPage.getContent().stream()
                 .map(assignmentMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
 
         PaginationResponse<AssignmentDTO> paginationResponse = new PaginationResponse<>(
-                assignments,
                 assignmentPage.getNumber(),
                 assignmentPage.getTotalPages(),
                 assignmentPage.getTotalElements(),
-                assignmentPage.getSize()
+                assignmentPage.getSize(),
+                assignments
         );
-
         return new ApiResponse(true, "Assignments retrieved successfully", null, paginationResponse);
-    }
-
-    // Search by Assignment Code
-    public ApiResponse searchByAssignmentCode(String assignmentCode) {
-        List<AssignmentEntity> assignments = assignmentRepository.findByAssignmentCode(assignmentCode);
-        if (assignments.isEmpty()) {
-            throw new EntityNotFoundException("No assignments found with code: " + assignmentCode);
-        }
-
-        List<AssignmentDTO> assignmentDTOs = assignments.stream()
-                .map(assignmentMapper::toDTO)
-                .collect(Collectors.toList());
-
-        return new ApiResponse(true, "Assignments found by code", assignmentDTOs, null);
-    }
-
-    // Search by Project ID
-    public ApiResponse searchByProjectId(String projectId) {
-        List<AssignmentEntity> assignments = assignmentRepository.findByProjectId(projectId);
-        if (assignments.isEmpty()) {
-            throw new EntityNotFoundException("No assignments found with project ID: " + projectId);
-        }
-
-        List<AssignmentDTO> assignmentDTOs = assignments.stream()
-                .map(assignmentMapper::toDTO)
-                .collect(Collectors.toList());
-
-        return new ApiResponse(true, "Assignments found by project ID", assignmentDTOs, null);
-    }
-
-    // Search by Status
-    public ApiResponse searchByStatus(Status status) {
-        List<AssignmentEntity> assignments = assignmentRepository.findByStatus(status);
-        List<AssignmentDTO> assignmentDTOs = assignments.stream().map(assignmentMapper::toDTO).toList();
-        return new ApiResponse(true, "Assignments found by status", assignmentDTOs, null);
-    }
-
-    // Search by Placement Type
-    public ApiResponse searchByPlacementType(PlacementType placementType) {
-        List<AssignmentEntity> assignments = assignmentRepository.findByPlacementType(placementType);
-        List<AssignmentDTO> assignmentDTOs = assignments.stream().map(assignmentMapper::toDTO).toList();
-        return new ApiResponse(true, "Assignments found by placement type", assignmentDTOs, null);
-    }
-
-    // Search by Work Location Country
-    public ApiResponse searchByWorkLocationCountry(String country) {
-        List<AssignmentEntity> assignments = assignmentRepository.findByWorkLocationCountry(country);
-        List<AssignmentDTO> assignmentDTOs = assignments.stream().map(assignmentMapper::toDTO).toList();
-        return new ApiResponse(true, "Assignments found by work location country", assignmentDTOs, null);
-    }
-
-    // Search by Employee Name
-    public ApiResponse searchByEmployeeName(String name) {
-        List<AssignmentEntity> assignments = assignmentRepository.findByEmployeeName(name);
-        List<AssignmentDTO> assignmentDTOs = assignments.stream().map(assignmentMapper::toDTO).toList();
-        return new ApiResponse(true, "Assignments found by employee name", assignmentDTOs, null);
-    }
-
-    // Search by Billing Pay Rate
-    public ApiResponse searchByBillingPayRate(double payRate) {
-        List<AssignmentEntity> assignments = assignmentRepository.findByBillingPayRate(payRate);
-        List<AssignmentDTO> assignmentDTOs = assignments.stream().map(assignmentMapper::toDTO).toList();
-        return new ApiResponse(true, "Assignments found by billing pay rate", assignmentDTOs, null);
-    }
-
-    // Search by Date Range
-    public ApiResponse searchByDateRange(Date startDate, Date endDate) {
-        List<AssignmentEntity> assignments = assignmentRepository.findByDateRange(startDate, endDate);
-        List<AssignmentDTO> assignmentDTOs = assignments.stream().map(assignmentMapper::toDTO).toList();
-        return new ApiResponse(true, "Assignments found by date range", assignmentDTOs, null);
     }
 
     // Global Search with Pagination
@@ -186,20 +138,90 @@ public class AssignmentServiceImpl {
             throw new EntityNotFoundException("No assignments found matching the criteria: " + searchKey);
         }
 
-        List<AssignmentDTO> assignmentDTOs = assignmentEntities.getContent().stream()
-                .map(assignmentMapper::toDTO)
-                .collect(Collectors.toList());
-
-        PaginationResponse<AssignmentDTO> paginationResponse = new PaginationResponse<>(
-                assignmentDTOs,
-                assignmentEntities.getNumber(),
-                assignmentEntities.getTotalPages(),
-                assignmentEntities.getTotalElements(),
-                assignmentEntities.getSize()
-        );
-
-        return new ApiResponse(true, "Assignments found", null, paginationResponse);
+        return new ApiResponse(true, "Assignments found", null, createPaginationResponse(assignmentEntities));
     }
 
+    // Search by Assignment Code with Pagination
+    public ApiResponse searchByAssignmentCode(String assignmentCode, int page, int pageSize) {
+        Pageable pageable = PageRequest.of(page, pageSize);
+        Page<AssignmentEntity> assignments = assignmentRepository.findByAssignmentCodeContainingIgnoreCase(assignmentCode, pageable);
 
+        if (assignments.isEmpty()) {
+            throw new EntityNotFoundException("No assignments found with code: " + assignmentCode);
+        }
+
+        return new ApiResponse(true, "Assignments found by code", null, createPaginationResponse(assignments));
+    }
+
+    // Search by Project ID with Pagination
+    public ApiResponse searchByProjectId(String projectId, int page, int pageSize) {
+        Pageable pageable = PageRequest.of(page, pageSize);
+        Page<AssignmentEntity> assignments = assignmentRepository.findByProjectIdContainingIgnoreCase(projectId, pageable);
+
+        if (assignments.isEmpty()) {
+            throw new EntityNotFoundException("No assignments found with project ID: " + projectId);
+        }
+
+        return new ApiResponse(true, "Assignments found by project ID", null, createPaginationResponse(assignments));
+    }
+
+    // Search by Work Location Country with Pagination
+    public ApiResponse searchByWorkLocationCountry(String country, int page, int pageSize) {
+        Pageable pageable = PageRequest.of(page, pageSize);
+        Page<AssignmentEntity> assignments = assignmentRepository.findByWorkLocationCountryContainingIgnoreCase(country, pageable);
+
+        if (assignments.isEmpty()) {
+            throw new EntityNotFoundException("No assignments found in country: " + country);
+        }
+
+        return new ApiResponse(true, "Assignments found by country", null, createPaginationResponse(assignments));
+    }
+
+    // Search by Status with Pagination
+    public ApiResponse searchByStatus(Status status, int page, int pageSize) {
+        Pageable pageable = PageRequest.of(page, pageSize);
+        Page<AssignmentEntity> assignments = assignmentRepository.findByStatus(status, pageable);
+
+        if (assignments.isEmpty()) {
+            throw new EntityNotFoundException("No assignments found with status: " + status);
+        }
+
+        return new ApiResponse(true, "Assignments found by status", null, createPaginationResponse(assignments));
+    }
+
+    // Search by Placement Type with Pagination
+    public ApiResponse searchByPlacementType(PlacementType placementType, int page, int pageSize) {
+        Pageable pageable = PageRequest.of(page, pageSize);
+        Page<AssignmentEntity> assignments = assignmentRepository.findByPlacementType(placementType, pageable);
+
+        if (assignments.isEmpty()) {
+            throw new EntityNotFoundException("No assignments found with placement type: " + placementType);
+        }
+
+        return new ApiResponse(true, "Assignments found by placement type", null, createPaginationResponse(assignments));
+    }
+
+    // Search by Billing Pay Rate with Pagination
+    public ApiResponse searchByBillingPayRate(double payRate, int page, int pageSize) {
+        Pageable pageable = PageRequest.of(page, pageSize);
+        Page<AssignmentEntity> assignments = assignmentRepository.findByBillingPayRate(payRate, pageable);
+
+        if (assignments.isEmpty()) {
+            throw new EntityNotFoundException("No assignments found with pay rate: " + payRate);
+        }
+
+        return new ApiResponse(true, "Assignments found by billing pay rate", null, createPaginationResponse(assignments));
+    }
+
+    // Search by Date Range with Pagination
+    public ApiResponse searchByDateRange(Date startDate, Date endDate, int page, int pageSize) {
+        Pageable pageable = PageRequest.of(page, pageSize);
+        Page<AssignmentEntity> assignments = assignmentRepository.findByDateRange(startDate, endDate, pageable);
+
+        if (assignments.isEmpty()) {
+            throw new EntityNotFoundException("No assignments found in the given date range.");
+        }
+
+        return new ApiResponse(true, "Assignments found by date range", null, createPaginationResponse(assignments));
+    }
 }
